# .dotfiles

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  install.sh  install_fonts  readme.md  terminfo.tmux
aerospace/.config/aerospace/: aerospace.toml
ctop/.config/ctop/: config
gh-dash/: config.yml
ghostty/.config/ghostty/: config
git/: .gitconfig  .gitignore
git_worktree_clean/: Cargo.toml  flake.nix  justfile
git_worktree_clean/src/: main.rs
htop/: htoprc
htop/.config/htop/: htoprc
nix/: README.md  flake.nix  secrets.nix  tools.nix
nix-darwin/.config/nix-darwin/: flake.nix  home.nix
nix/.config/nix/: nix.conf
nix/darwin/: aerospace.nix  default.nix  tools.nix
nix/darwin/defaults/: arc_browser.nix  dock_finder.nix  flycut.nix  general.nix  global.nix  istat_menus.nix  (+6 more)
nix/home/: aerospace.nix  default.nix  fonts.nix  ghostty.nix  gitconfig.nix  gpg-import.nix  ssh-import.nix  tmux.nix
nix/modules/: hyprland.nix  nix.nix  packages.nix  steam.nix  sunshine.nix  tailscale.nix
nix/secrets/: default.nix  default.nix.example  gpg.nix  licenses.nix  ssh.nix
nvim/: coc-settings.json  filetype.lua  init.lua
nvim/plugin/: packer_compiled.lua
sketchybar/: colors.sh  icons.sh  sketchybarrc
sketchybar/items/: aerospace.sh  apple.sh  github.sh  spaces.sh
sketchybar/plugins/: aerospace.sh  battery.sh  clock.sh  cpu.sh  title.sh
skhd/: .skhdrc
stow/: .stow-global-ignore
term/alacritty/: alacritty.yml
term/iterm/: com.googlecode.iterm2.plist
tmux/: .tmux.conf
yabai/: .yabairc
zsh/: .p10k.zsh  .zlogin  .zsh_profile  .zshrc  fzf.zsh
(+199 files in other folders)
