[package]
name = "git_worktree_clean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
indicatif = "0.17.7"
rayon = "1.8.0"
skim = "0.10.4"
